Regression: use after free in video filters chain
Start
valgrind vlc -I rc video.mpg
wait for the video window to show, and press Ctrl+C:
==10074== Thread 7:
==10074== Invalid read of size 4
==10074== at 0x40F5B4E: filter_chain_VideoFlush (filter_chain.c:239)
==10074== by 0x40AFF24: ThreadFilterFlush (video_output.c:841)
==10074== by 0x40B0166: ThreadFlush (video_output.c:887)
==10074== by 0x40B027E: ThreadStop (video_output.c:1057)
==10074== by 0x40B170C: Thread (video_output.c:1096)
==10074== by 0x41487AF: start_thread (pthread_create.c:300)
==10074== by 0x422B81D: clone (clone.S:130)
==10074== Address 0x7272e50 is 16 bytes inside a block of size 669 free'd
==10074== at 0x4023866: free (vg_replace_malloc.c:325)
==10074== by 0x40F6694: filter_chain_Delete (filter_chain.c:146)
==10074== by 0x40B024C: ThreadStop (video_output.c:1052)
==10074== by 0x40B170C: Thread (video_output.c:1096)
==10074== by 0x41487AF: start_thread (pthread_create.c:300)
==10074== by 0x422B81D: clone (clone.S:130)