Fixed invalid pointer usage after free (vout).

It closes #3999.